--- a/index.html
+++ b/index.html
@@ -23,26 +23,30 @@ body {font-family: 'Segoe UI', 'Microsoft YaHei', sans-serif;background: var(--d
 .floating-particles {position: fixed;top:0;left:0;width:100%;height:100%;pointer-events: none;z-index:-1;}
 .particle {position: absolute;width:8px;height:8px;border-radius:50%;background:var(--gradient-1);filter:blur(2px);animation: particleFloat 20s infinite linear;}
 
-/* 雪花样式（明显可见） */
+/* 优化1：粒子质感升级，发光更柔和 */
 .snow-container {position: fixed;top:0;left:0;width:100%;height:100%;pointer-events: none;z-index:0;perspective: 800px;}
 .snowflake {
 position: absolute;
-width: 8px;
-height: 8px;
+width: 5px;
+height: 5px;
 border-radius: 50%;
-background: #fff;
-filter: blur(2px) drop-shadow(0 0 3px #a8ff78);
+background: linear-gradient(135deg, var(--accent), var(--accent2));
+filter: blur(2.5px) drop-shadow(0 0 3px var(--accent2));
 opacity: 0.9;
+/* 优化2：飘落动画减速，更平缓，和晃动呼应 */
 animation: snowFall linear infinite;
+animation-duration: 25s;
+/* 优化3：惯性过渡，比之前更丝滑 */
+transition: transform 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
-/* 新增：权限请求按钮样式（居中显示，醒目） */
+/* 权限按钮样式 */
 .permission-button-container {
 position: fixed;
 top: 20px;
 left: 50%;
 transform: translateX(-50%);
-z-index: 9999; /* 最上层，确保能点到 */
+z-index: 9999;
 }
 #requestPermission {
 padding: 1rem 2rem;
@@ -101,7 +105,11 @@ text-shadow: 0 0 10px var(--accent);
 @keyframes gridMove {0%{transform:perspective(500px) rotateX(60deg) translateY(0);}100%{transform:perspective(500px) rotateX(60deg) translateY(50px);}}
 @keyframes pulseGlow {0%{opacity:0.5;filter:blur(100px);}100%{opacity:0.8;filter:blur(150px);}}
 @keyframes particleFloat {0%{transform:translate(0,0) rotate(0deg);opacity:0;}10%{opacity:1;}90%{opacity:1;}100%{transform:translate(calc(100vw*var(--tx)),calc(100vh*var(--ty))) rotate(360deg);opacity:0;}}
-@keyframes snowFall {0%{transform:translateY(-10px);opacity:0.9;}100%{transform:translateY(100vh);opacity:0;}}
+/* 优化4：飘落动画更缓慢，Y轴位移更长，更自然 */
+@keyframes snowFall {
+0%{transform: translateY(-10px) translateX(0); opacity: 0.9;}
+100%{transform: translateY(100vh) translateX(15px); opacity: 0;}
+}
 
 @media (max-width:768px) {
 .hero-title {font-size:3.5rem;}
@@ -112,7 +120,7 @@ text-shadow: 0 0 10px var(--accent);
 .thanks-grid {grid-template-columns:1fr;gap:3rem;}
 .thanks-column h3 {font-size:1.6rem;}
 .thanks-item {font-size:1.2rem;}
-.snowflake {width:6px;height:6px;}
+.snowflake {width:4px;height:4px;}
 }
 </style>
 </head>
@@ -123,10 +131,9 @@ text-shadow: 0 0 10px var(--accent);
 <div class="floating-particles" id="floatingParticles"></div>
 <div class="snow-container" id="snowContainer"></div>
 
-<!-- 新增：权限请求按钮 -->
 <div class="permission-button-container">
 <button id="requestPermission">点击开启陀螺仪权限</button>
-<div id="permissionStatus">请先授权以启用雪花跟随</div>
+<div id="permissionStatus">请先授权以启用粒子跟随</div>
 </div>
 
 <section class="hero">
@@ -188,9 +195,11 @@ const floatingParticles = document.getElementById('floatingParticles');
 const snowContainer = document.getElementById('snowContainer');
 const requestPermissionBtn = document.getElementById('requestPermission');
 const permissionStatus = document.getElementById('permissionStatus');
-let permissionGranted = false; // 权限状态标记
+let permissionGranted = false;
+// 优化5：记录上一次位置，实现惯性效果
+let lastMoveX = 0;
+let lastMoveY = 0;
 
-// 创建浮动粒子（原有功能）
 function createFloatingParticles() {
 const particleCount = 50;
 for (let i = 0; i < particleCount; i++) {
@@ -207,16 +216,20 @@ floatingParticles.appendChild(particle);
 }
 }
 
-// 创建雪花（150个，密集可见）
+// 优化6：粒子数量精简+随机响应系数，避免整齐划一
 function createSnowflakes() {
-const snowCount = 150;
+const snowCount = 100;
 for(let i=0; i<snowCount; i++) {
 const snow = document.createElement('div');
 snow.classList.add('snowflake');
-const size = Math.random()*4 + 6;
+// 随机大小（4-5px），更统一
+const size = Math.random()*1 + 4;
 const left = Math.random()*100;
 const top = Math.random()*100;
-const duration = Math.random()*15 + 8;
+// 随机飘落速度（20-30s），更有层次感
+const duration = Math.random()*10 + 20;
+// 优化7：每个粒子添加随机响应系数，跟随幅度不同
+snow.dataset.response = Math.random()*0.8 + 0.4; // 0.4-1.2倍响应幅度
 snow.style.width = `${size}px`;
 snow.style.height = `${size}px`;
 snow.style.left = `${left}vw`;
@@ -227,44 +240,44 @@ snowContainer.appendChild(snow);
 }
 }
 
-// 核心修复：雪花跟随手机方向（带权限检查）
+// 优化8：惯性跟随算法，不是即时响应，有加速减速
 function snowFollowTilt(e) {
-if (!permissionGranted) return; // 没授权不执行
+if (!permissionGranted) return;
+const gamma = e.gamma || 0;
+const beta = e.beta || 0;
 
-const gamma = e.gamma || 0; // 左右倾斜（-90~90）
-const beta = e.beta || 0;   // 前后倾斜（-180~180）
+// 目标位置（降低灵敏度）
+const targetX = gamma / 5;
+const targetY = beta / 7;
 
-// 灵敏度调整（分母越小越灵敏，现在很明显）
-const moveX = gamma / 2; 
-const moveY = beta / 3;
+// 惯性插值：当前位置 = 上一次位置 + (目标位置 - 上一次位置) * 阻尼系数
+lastMoveX = lastMoveX + (targetX - lastMoveX) * 0.2;
+lastMoveY = lastMoveY + (targetY - lastMoveY) * 0.2;
 
-// 所有雪花跟随移动
+// 每个粒子按自身响应系数移动，更自然
 const allSnow = document.querySelectorAll('.snowflake');
 allSnow.forEach(snow => {
-snow.style.transform = `translate(${moveX}px, ${moveY}px)`;
+const response = parseFloat(snow.dataset.response);
+snow.style.transform = `translate(${lastMoveX * response}px, ${lastMoveY * response}px)`;
 });
 }
 
-// 核心修复：请求设备方向权限（必须用户点击后执行）
 async function requestOrientationPermission() {
 try {
-// 现代浏览器（iOS 13+/Chrome 85+）支持显式请求权限
 if (DeviceOrientationEvent && DeviceOrientationEvent.requestPermission) {
 const permission = await DeviceOrientationEvent.requestPermission();
 if (permission === 'granted') {
 permissionGranted = true;
-permissionStatus.textContent = '✅ 权限已授权，倾斜手机控制雪花';
+permissionStatus.textContent = '✅ 权限已授权，倾斜手机控制粒子';
 requestPermissionBtn.disabled = true;
 requestPermissionBtn.style.opacity = 0.5;
-// 权限通过后才监听方向事件
 window.addEventListener('deviceorientation', snowFollowTilt);
 } else {
-permissionStatus.textContent = '❌ 权限被拒绝，无法使用雪花跟随';
+permissionStatus.textContent = '❌ 权限被拒绝，无法使用粒子跟随';
 }
 } else {
-// 旧浏览器自动授权
 permissionGranted = true;
-permissionStatus.textContent = '✅ 自动授权成功，倾斜手机控制雪花';
+permissionStatus.textContent = '✅ 自动授权成功，倾斜手机控制粒子';
 requestPermissionBtn.style.display = 'none';
 window.addEventListener('deviceorientation', snowFollowTilt);
 }
@@ -274,10 +287,8 @@ console.error('权限请求失败:', error);
 }
 }
 
-// 绑定按钮点击事件（必须用户主动点击）
 requestPermissionBtn.addEventListener('click', requestOrientationPermission);
 
-// 原有鼠标交互
 document.addEventListener('mousemove', (e) => {
 const x = (e.clientX/window.innerWidth -0.5)*20;
 const y = (e.clientY/window.innerHeight -0.5)*20;
@@ -306,7 +317,6 @@ const thanksItems = document.querySelectorAll('.thanks-item');
 thanksItems.forEach(item => item.style.transform = 'translate(0,0)');
 });
 
-// WebGL背景（原有功能）
 function initWebGL() {
 const canvas = document.getElementById('webgl-canvas');
 const gl = canvas.getContext('webgl') || canvas.getContext('experimental-webgl');
@@ -343,7 +353,6 @@ gl.uniform1f(timeUniformLocation,time);gl.clear(gl.COLOR_BUFFER_BIT);gl.drawArra
 }animate();
 }
 
-// 初始化
 createFloatingParticles();
 createSnowflakes();
 initWebGL();
