--- a/index.html
+++ b/index.html
@@ -163,19 +163,19 @@ transform:rotateY(180deg);backface-visibility:hidden;
 <section class="services">
 <div class="services-grid">
 <div class="service-card">
-<div class="service-icon service-icon-custom" style="background-image: url('https://1813813973.v.123pan.cn/1813813973/37583091'), var(--gradient-1);" onclick="window.open('https://1813813973.v.123pan.cn/1813813973/41122933', '_blank')"></div>
+<div class="service-icon service-icon-custom" style="background-image: url('https://1813813973.v.123pan.cn/1813813973/37583091'), var(--gradient-1);" onclick="window.open('https://xqvip.lanzouu.com/ijPuJ3gvz4ej', '_blank')"></div>
 <a href="#" class="service-link">XQVIP Ultra下载</a>
 </div>
 <div class="service-card">
-<div class="service-icon service-icon-custom" style="background-image: url('https://1813813973.v.123pan.cn/1813813973/41799551'), var(--gradient-1);" onclick="window.open('https://1813813973.v.123pan.cn/1813813973/41467979', '_blank')"></div>
+<div class="service-icon service-icon-custom" style="background-image: url('https://1813813973.v.123pan.cn/1813813973/41799551'), var(--gradient-1);" onclick="window.open('https://xqvip.lanzouu.com/iaKRD3gvz4je', '_blank')"></div>
 <a href="#" class="service-link">XQVIP专属框架下载</a>
 </div>
 <div class="service-card">
-<div class="service-icon service-icon-custom" style="background-image: url('https://1813813973.v.123pan.cn/1813813973/41799555'), var(--gradient-1);" onclick="window.open('https://1813813973.v.123pan.cn/1813813973/40969404', '_blank')"></div>
+<div class="service-icon service-icon-custom" style="background-image: url('https://1813813973.v.123pan.cn/1813813973/41799555'), var(--gradient-1);" onclick="window.open('https://xqvip.lanzouu.com/iSrAC3gvznsh', '_blank')"></div>
 <a href="#" class="service-link">专属诅咒游戏安装包</a>
 </div>
 <div class="service-card">
-<div class="service-icon service-icon-custom" style="background-image: url('https://1813813973.v.123pan.cn/1813813973/37579730'), var(--gradient-1);" onclick="window.open('https://1813813973.v.123pan.cn/1813813973/40993614', '_blank')"></div>
+<div class="service-icon service-icon-custom" style="background-image: url('https://1813813973.v.123pan.cn/1813813973/37579730'), var(--gradient-1);" onclick="window.open('https://xqvip.lanzouu.com/iz2h43gvz5md', '_blank')"></div>
 <a href="#" class="service-link">XQVIP官网下载</a>
 </div>
 </div>
